--- a/ComedyHackDay/app/src/main/AndroidManifest.xml
+++ b/ComedyHackDay/app/src/main/AndroidManifest.xml
@@ -4,7 +4,7 @@
     <uses-permission android:name="android.permission.INTERNET"/>
     <application
         android:allowBackup="true"
-        android:icon="@drawable/compass_icon"
+        android:icon="@drawable/gtfo_icon_3"
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme" >
